# rhino.inside-cpython

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  TODO  pyproject.toml  requirements.txt  run_build.ps1  run_tests.ps1  setup.py
.github/: pull_request_template.md
.github/workflows/: build.yaml
Samples/gh-headless/: ripy_gh_headless.py
examples/gh-headless/: ripy_gh_headless.py  simple_def.gh
rhinoinside/: __init__.py
scripts/: README.md  update_resolver_libs.py
tests/: conftest.py  test_basic.py
