[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhinoinside"
version = "0.8.2"
description = "Embed Rhino in CPython"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Robert McNeel & Associates", email = "steve@mcneel.com" },
  { name = "Robert McNeel & Associates", email = "ehsan@mcneel.com" }
]
dependencies = [
  "pythonnet==3.0.5",
  "dnfile==0.15.1",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/mcneel/rhino.inside-cpython"
Documentation = "https://github.com/mcneel/rhino.inside-cpython"
Source = "https://github.com/mcneel/rhino.inside-cpython"
Tracker = "https://github.com/mcneel/rhino.inside-cpython"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*", "examples*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
